--- a/qt_test/basicListener/mainwindow.ui
+++ b/qt_test/basicListener/mainwindow.ui
@@ -124,8 +124,8 @@
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>10</y>
+        <x>280</x>
+        <y>140</y>
         <width>121</width>
         <height>61</height>
        </rect>
@@ -147,10 +147,10 @@
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>140</x>
         <y>10</y>
-        <width>171</width>
-        <height>61</height>
+        <width>211</width>
+        <height>101</height>
        </rect>
       </property>
       <property name="title">
@@ -169,6 +169,32 @@
         <string>Show ADC readings</string>
        </property>
       </widget>
+      <widget class="QCheckBox" name="config_logADC_checkBox">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>50</y>
+         <width>171</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Log ADC readings</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="config_logColdJunction_checkBox">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>70</y>
+         <width>191</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Log Cold Junction readings</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_5">
       <property name="geometry">
@@ -182,7 +208,7 @@
       <property name="title">
        <string>Graph</string>
       </property>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <property name="geometry">
         <rect>
          <x>10</x>
